# mweb

./: .gitignore  CMakeLists.txt  README.md  config.json  login.html  run.sh
content/: index.html  routes.json  style.css
include/: buffers.h  http_message.h  log_levels.h  logging.h  server.h
include/collections/: arraylist.h  queue.h  slot_map.h
include/http2/: http2.h
include/http_core/: http_core.h
include/io_uring/: io_uring.h
include/task/: task.h
include/threadpool/: cancellation_token.h  threadpool.h
src/: config_manager.c  main.c  server.c  server_worker.c  server_worker.h  stringbuilder.c
src/collections/: arraylist.c  queue.c  slot_map.c
src/http2/: bit_stream.c  bit_stream.h  buffers.h  hpack.c  hpack.h  hpack_primitives.c  hpack_primitives.h  hpack_table.h  http2.c  http2.h  http2_common.c  http2_common.h  http2_frame.c  http2_frame.h  http2_logging.h  huffman.c  huffman.h  huffman_table.h
src/http2/frames/: continuation_frame.c  data_frame.c  frame_utils.c  frame_utils.h  goaway_frame.c  header_frame.c  ping_frame.c  priority_frame.c  push_promise_frame.c  rst_stream_frame.c  settings_frame.c  window_update_frame.c
src/http2/stream/: stream.h  stream_default.c  stream_half_closed_remote.c  stream_idle.c  stream_open.c
src/http2/tests/: bit_stream_test.c  frame_test.c  hpack_test.c  test_harness.h
src/http_core/: content_server.c  content_server.h  content_server_contract.c  content_server_contract.h  content_server_proxy.c  content_server_proxy.h  http_core.c  http_core.h  http_core_old.c  stringbuilder.h
src/http_core/tests/: file_io_test.c
src/io_uring/: io_uring.c
src/server/: config_manager.h  queue_test.c  server.c  server_worker.c  server_worker.h  thread_pool_perf_test.c  thread_pool_test.c  tls_server.c  tls_server.h
src/task/: task.c
src/threadpool/: cancellation_token.c  queue.c  queue.h  threadpool.c
test/: CMakeLists.txt  test.c
